--- a/src/storyFormat.html
+++ b/src/storyFormat.html
@@ -33,5 +33,8 @@
 		<div id="storyData" style="display: none;">
 			{{STORY_DATA}}
 		</div>
+		<script>
+			document.getElementById("output").innerHTML = Twison.convert()
+		</script>
 	</body>
 </html>
