Move automatic conversion back into JS file

--- a/src/storyFormat.html
+++ b/src/storyFormat.html
@@ -34,7 +34,7 @@
 			{{STORY_DATA}}
 		</div>
 		<script>
-			document.getElementById("output").innerHTML = Twison.convert()
+			Twison.convert()
 		</script>
 	</body>
 </html>
