--- a/src/storyFormat.html
+++ b/src/storyFormat.html
@@ -5,7 +5,7 @@
 /**
  * Twison - Twine 2 JSON Export Story Format
  * 
- * Copyright (c) 2015 Mike Lazer-Walker
+ * Copyright (c) 2015 Mike Walker
  * https://lazerwalker.com
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
