Update test fixture to cover edge cases

--- a/test/fixture.html
+++ b/test/fixture.html
@@ -1,12 +1,6 @@
-<tw-storydata name="Test" startnode="1" creator="Twine" creator-version="2.0.9" ifid="1881C2BE-C764-4D33-ACC6-7BAEBB6D770A" format="Twison" options="" hidden=""><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="First passage" tags="tag second-tag" position="553.3333333333334,38.333333333333336">This is a passage that goes to [[No Where->nowhere]].
-
-or is to [[somewhere]]?
-
-Here's a [[third link]]
-
-Click [[me->someNode]]</tw-passagedata>
-<tw-passagedata pid="2" name="somewhere" tags="" position="893.3333333333334,241.66666666666669">You found me!</tw-passagedata>
-<tw-passagedata pid="3" name="nowhere" tags="" position="210,281">Double-click this passage to edit it.</tw-passagedata>
-<tw-passagedata pid="4" name="third link" tags="" position="1335,230">Double-click this passage to edit it.</tw-passagedata>
-<tw-passagedata pid="5" name="someNode" tags="" position="508.33333333333337,458.33333333333337">himom</tw-passagedata>
+<tw-storydata name="Twison-Test" startnode="1" creator="Twine" creator-version="2.0.9" ifid="94716246-402E-4E05-914B-532937C5EE88" format="Twison" options="" hidden=""><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Start" tags="tag1 tag2" position="511,47">This is the first node.
+There is a [[second]] node, and a [[third-&gt;another]] node.</tw-passagedata>
+<tw-passagedata pid="2" name="second" tags="" position="328,197">Would you rather go to [[another]]?</tw-passagedata>
+<tw-passagedata pid="3" name="another" tags="" position="652,195">Would you rather go to [[second]]?</tw-passagedata>
+<tw-passagedata pid="4" name="unattached" tags="" position="893,116">I am unattached, and have a link that is [[broken]].</tw-passagedata>
 </tw-storydata>
