--- a/test/test.html
+++ b/test/test.html
@@ -23,7 +23,7 @@
  * WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
  * SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  */
-var Twison={extractLinksFromText:function(t){var n=t.match(/\[\[.+?\]\]/g);return n?n.map(function(t){var n=t.match(/\[\[(.*?)\-\&gt;(.*?)\]\]/);return n?{name:n[1],link:n[2]}:(t=t.substring(2,t.length-2),{name:t,link:t})}):void 0},convertPassage:function(t){var n={text:t.innerHTML},a=Twison.extractLinksFromText(n.text);if(a&&(n.links=a),["name","pid","position","tags"].forEach(function(a){var e=t.attributes[a].value;e&&(n[a]=e)}),n.position){var e=n.position.split(",");n.position={x:e[0],y:e[1]}}return n.tags&&(n.tags=n.tags.split(" ")),n},convertStory:function(t){var n=t.getElementsByTagName("tw-passagedata"),a=Array.prototype.slice.call(n).map(Twison.convertPassage),e={passages:a};["name","startnode","creator","creator-version","ifid"].forEach(function(n){var a=t.attributes[n].value;a&&(e[n]=a)});var i={};return e.passages.forEach(function(t){i[t.name]=t.pid}),e.passages.forEach(function(t){t.links&&t.links.forEach(function(t){t.pid=i[t.link]})}),e},convert:function(){var t=document.getElementsByTagName("tw-storydata")[0],n=JSON.stringify(Twison.convertStory(t),null,2);document.getElementById("output").innerHTML=n}};window.Twison=Twison;		
+var Twison={extractLinksFromText:function(t){var n=t.match(/\[\[.+?\]\]/g);return n?n.map(function(t){var n=t.match(/\[\[(.*?)\-\&gt;(.*?)\]\]/);return n?{name:n[1],link:n[2]}:(t=t.substring(2,t.length-2),{name:t,link:t})}):null},extractPropsFromText:function(t){var n,r={},a=!1;const e=/\{\{((\s|\S)+?)\}\}((\s|\S)+?)\{\{\/\1\}\}/gm;for(;null!==(n=e.exec(t));){r[n[1]]=n[3].replace(/(\r\n|\n|\r)/gm,""),a=!0}return a?r:null},convertPassage:function(t){var n={text:t.innerHTML},r=Twison.extractLinksFromText(n.text);r&&(n.links=r);const a=Twison.extractPropsFromText(n.text);if(a&&(n.props=a),["name","pid","position","tags"].forEach(function(r){var a=t.attributes[r].value;a&&(n[r]=a)}),n.position){var e=n.position.split(",");n.position={x:e[0],y:e[1]}}return n.tags&&(n.tags=n.tags.split(" ")),n},convertStory:function(t){var n=t.getElementsByTagName("tw-passagedata"),r=Array.prototype.slice.call(n).map(Twison.convertPassage),a={passages:r};["name","startnode","creator","creator-version","ifid"].forEach(function(n){var r=t.attributes[n].value;r&&(a[n]=r)});var e={};return a.passages.forEach(function(t){e[t.name]=t.pid}),a.passages.forEach(function(t){t.links&&t.links.forEach(function(t){t.pid=e[t.link],t.pid||(t.broken=!0)})}),a},convert:function(){var t=document.getElementsByTagName("tw-storydata")[0],n=JSON.stringify(Twison.convertStory(t),null,2);document.getElementById("output").innerHTML=n}};window.Twison=Twison;		
 		</script>
 	</head>
 	<body>
@@ -31,11 +31,27 @@ var Twison={extractLinksFromText:function(t){var n=t.match(/\[\[.+?\]\]/g);retur
 		
 		</pre>
 		<div id="storyData" style="display: none;">
-			<tw-storydata name="Twison-Test" startnode="1" creator="Twine" creator-version="2.0.9" ifid="94716246-402E-4E05-914B-532937C5EE88" format="Twison" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Start" tags="tag1 tag2" position="511,47">This is the first node.
+			<tw-storydata name="Twison-Test" startnode="1" creator="Twine" creator-version="2.3.5" ifid="94716246-402E-4E05-914B-532937C5EE88" zoom="1" format="Twisontest13" format-version="0.0.1" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Start" tags="tag1 tag2" position="511,47" size="100,100">This is the first node.
 There is a [[second]] node, and a [[third-&gt;another]] node.</tw-passagedata>
-<tw-passagedata pid="2" name="second" tags="" position="328,197">Would you rather go to [[another]]?</tw-passagedata>
-<tw-passagedata pid="3" name="another" tags="" position="652,195">Would you rather go to [[second]]?</tw-passagedata>
-<tw-passagedata pid="4" name="unattached" tags="" position="893,116">I am unattached, and have a link that is [[broken]].</tw-passagedata>
+<tw-passagedata pid="2" name="second" tags="" position="328,197" size="100,100">Would you rather go to [[another]]?</tw-passagedata>
+<tw-passagedata pid="3" name="another" tags="" position="652,195" size="100,100">Would you rather go to [[second]]?</tw-passagedata>
+<tw-passagedata pid="4" name="unattached" tags="" position="893,116" size="100,100">I am unattached, and have a link that is [[broken]].</tw-passagedata>
+<tw-passagedata pid="5" name="Prop passage 1" tags="" position="425,331" size="100,100">Here&#39;s a passage that contains a single prop.
+
+{{foo}}
+
+bar
+
+{{/foo}}</tw-passagedata>
+<tw-passagedata pid="6" name="Prop passage 2" tags="" position="586,333" size="100,100">Here&#39;s a passage that contains, {{foo}}bar{{/foo}} multiple props.
+
+{{foo2}}
+bar2
+{{/foo2}}
+
+{{foo3}}
+12345{{/foo3}}</tw-passagedata>
+<tw-passagedata pid="7" name="Non-prop passage" tags="" position="738,333" size="100,100">} Here&#39;s a passage that has curly braces:{{/foo}} { , but no {{props}. }</tw-passagedata>
 </tw-storydata>
 
 		</div>
