Add nested props support
* Previously, our added props support only supported a single prop
  being transformed into an object. We've now added (theoretically)
  infinitely complex object creation based on the nested props.
* Example of a nested prop sequence is as follows:
  "{{foo}}{{bar}}value{{/bar}}{{/foo}}".

--- a/test/fixture.html
+++ b/test/fixture.html
@@ -18,6 +18,16 @@ bar2
 {{/foo2}}
 
 {{foo3}}
-12345{{/foo3}}</tw-passagedata>
+12345{{/foo3}}
+{{foo4}}
+{{test1}}
+a_value
+{{/test1}}
+
+{{test2}}
+another_value
+{{/test2}}
+
+{{/foo4}}</tw-passagedata>
 <tw-passagedata pid="7" name="Non-prop passage" tags="" position="738,333" size="100,100">} Here&#39;s a passage that has curly braces:{{/foo}} { , but no {{props}. }</tw-passagedata>
 </tw-storydata>
